--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,107 @@
-<build>
-  <plugins>
-    ...
-    
-    <plugin>
-      <groupId>org.sonarsource.scanner.maven</groupId>
-      <artifactId>sonar-maven-plugin</artifactId>
-      <version>3.9.1.2184</version>
-    </plugin>
-  </plugins>
-</build>
+http://www.w3.org/2001/XMLSchema-instance"
+
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+
+http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+ 
+
+  <modelVersion>4.0.0</modelVersion>
+
+ 
+
+  <groupId>org.saco</groupId>
+
+  <artifactId>myProject</artifactId>
+
+  <version>1.0.0</version>
+
+  <packaging>jar</packaging>
+
+ 
+
+  <name>myProject</name>
+
+  <description>A demo Java project for Jenkins and SonarQube integration</description>
+
+http://www.saco.com/devops/myproject</url>
+
+ 
+
+  <properties>
+
+<project.build.sourceEncoding>UTF-8project.build.sourceEncoding>
+
+    <maven.compiler.source>17</maven.compiler.source>
+
+    <maven.compiler.target>17</maven.compiler.target>
+
+  </properties>
+
+ 
+
+  <dependencies>
+
+    <!-- Unit testing with JUnit -->
+
+    <dependency>
+
+      <groupId>junit</groupId>
+
+      <artifactId>junit</artifactId>
+
+      <version>4.13.2</version>
+
+      <scope>test</scope>
+
+    </dependency>
+
+  </dependencies>
+
+ 
+
+  <build>
+
+    <plugins>
+
+      <!-- Java compiler plugin -->
+
+      <plugin>
+
+        <groupId>org.apache.maven.plugins</groupId>
+
+        <artifactId>maven-compiler-plugin</artifactId>
+
+        <version>3.10.1</version>
+
+        <configuration>
+
+          <source>${maven.compiler.source}</source>
+
+          <target>${maven.compiler.target}</target>
+
+        </configuration>
+
+      </plugin>
+
+ 
+
+      <!-- Unit test execution plugin -->
+
+      <plugin>
+
+        <groupId>org.apache.maven.plugins</groupId>
+
+        <artifactId>maven-surefire-plugin</artifactId>
+
+        <version>3.1.2</version>
+
+      </plugin>
+
+    </plugins>
+
+  </build>
+
+ 
+
+</project>
